--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-html{
+html, body{
     height: 100%;
-}
-body{
-    min-height: 100%;
 }
 p{
     font-family: 'Open Sans', sans-serif;    
@@ -16,6 +13,14 @@ h4, h5{
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
+}
+#hero h1{
+    color: white;
+}
+.jumbotron{
+    background-image: url(/assets/joshua_tree_np_night_sky_manish_mamtani_ste_hero.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 @media only screen and (min-width: 576px){ /* for mobile*/
@@ -90,5 +95,11 @@ h4, h5{
 
     #navigation{
         background: #232e27;
+    }
+
+    #hero{
+        height: 600px;
+        padding-left: 2%;
+        padding-right: 2%;
     }
 }
