--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a:active{
 }
 
 .jumbotron{
-    background-image: url(/assets/joshua_tree_np_night_sky_manish_mamtani_ste_hero.jpg);
+    background-image: url(images/joshua_tree_np_night_sky_manish_mamtani_ste_hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -62,8 +62,12 @@ a:active{
     border-right-color: #8DB4C6;
 }
 
+.fa:hover{
+    color: #8c9c09;
+}
+
 #heroCaption{
-    padding: 4% 3%;
+    padding: 1% 3%;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -126,17 +130,17 @@ a:active{
         font-size: 4em;
     }
     h2{
-        font-size: 2.5em;
+        font-size: 2em;
         color: #576B4E;
     }
     h3{
-        font-size: 2em;
+        font-size: 1.7em;
     }
     h4{
-        font-size: 2em;
+        font-size: 1.7em;
     }
     h5{
-        font-size: 1.5em;
+        font-size: 1.3em;
     }
     p{
         font-size: 1.2em;
@@ -172,7 +176,7 @@ a:active{
         padding-top: 0;
         padding-bottom: 0;
         margin:0;
-        height: 630px;
+        height: 530px;
     }
 
     #news{
