--- a/contactStyle.css
+++ b/contactStyle.css
@@ -68,6 +68,16 @@ a:active{
     border-right-width: 1px;
     border-right-color: #8DB4C6;
 }
+.greenDivideLeft{
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-left-color: #576B4E;
+}
+.greenDivideRight{
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-right-color: #576B4E;
+}
 
 .fa:hover{
     color: #8c9c09;
@@ -78,7 +88,12 @@ a:active{
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+#contact{
 
+}
+#contact ul li{
+    background: inherit;
+}
 
 @media only screen and (min-width: 576px){ /* for mobile*/
     h1{
@@ -135,22 +150,21 @@ a:active{
         font-size: 4em;
     }
     h2{
-        font-size: 2em;
+        font-size: 2.5em;
         color: #576B4E;
     }
     h3{
-        font-size: 1.7em;
+        font-size: 2em;
     }
     h4{
-        font-size: 1.7em;
+        font-size: 1.8em;
     }
     h5{
-        font-size: 1.3em;
+        font-size: 1.5em;
     }
     p{
         font-size: 1.2em;
     }
-
 
     .navbar{
         font-size: 1.2em;
@@ -170,6 +184,14 @@ a:active{
 
     #navigation{
         background: #232e27;
+    }
+
+    #pageTitle{
+        background: #8DB4C6;
+        padding: 1% 5%;
+    }
+    #pageTitle h2{
+        color: #232E27;
     }
 
     #hero{
