--- a/galleryStyle.css
+++ b/galleryStyle.css
@@ -39,11 +39,6 @@ a:active{
     color: #E2E6E4;
 }
 
-.plainLink{
-    text-decoration: none;
-    color: inherit;
-}
-
 .jumbotron{
     background-image: url(images/joshua_tree_np_night_sky_manish_mamtani_ste_hero.jpg);
     background-repeat: no-repeat;
@@ -54,42 +49,27 @@ a:active{
     height:100%;
 }
 
-.white{
-    color: white;
+.space{
+    padding: 0 2%;
 }
 
-.divideLeft{
-    border-left-style: solid;
-    border-left-width: 1px;
-    border-left-color: #8DB4C6;
-}
-.divideRight{
-    border-right-style: solid;
-    border-right-width: 1px;
-    border-right-color: #8DB4C6;
-}
-
-.fa:hover{
-    color: #8c9c09;
+.imgPop{
     cursor: pointer;
+    transition: 0.02s;
+}  
+.imgPop:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
 }
 
-#heroCaption{
-    padding: 1% 3%;
-    background-color: rgba(0, 0, 0, 0.4);
+.modal-dialog{
+    max-width: 56%;
+}
+.modal-body{
+    padding: 0;
 }
 
-#subscribe{
-    padding: 2% 2% 1.8% 2%;
-    margin-bottom: 2%;
-    background: #8DB4C6;
-    border-style: solid;
-    border-width: thin 0;
-    border-color: black;
-}
-
-#middle{
-    margin: 3% 0;
+#nature, #hc, #officials{
+    padding: 2%;
 }
 
 
@@ -148,25 +128,20 @@ a:active{
         font-size: 4em;
     }
     h2{
-        font-size: 2em;
+        font-size: 2.5em;
         color: #576B4E;
     }
     h3{
-        font-size: 1.7em;
+        font-size: 2em;
     }
     h4{
-        font-size: 1.7em;
+        font-size: 1.8em;
     }
     h5{
-        font-size: 1.3em;
+        font-size: 1.5em;
     }
     p{
         font-size: 1.2em;
-    }
-
-    .carousel-control-next-icon, .carousel-control-prev-icon{
-        width:50px;
-        height: 50px;
     }
 
     .navbar{
@@ -177,38 +152,31 @@ a:active{
         font-size: .8em;
         padding-left: 1%;
     }
-    .connectIcon{
-        font-size: 5em;
-        color: #8DB4C6;
-    }
-
+   
     .footSpace{
         height: 20px;
+    }
+    .pad-5{
+        padding: 5%;
     }
 
     #navigation{
         background: #232e27;
     }
 
+    #pageTitle{
+        background: #8DB4C6;
+        padding: 1% 5%;
+    }
+    #pageTitle h2{
+        color: #232E27;
+    }
+
     #hero{
         padding-top: 0;
         padding-bottom: 0;
         margin:0;
-        height: 530px;
-    }
-
-    #news{
-        padding: 2%;
-    }
-
-    
-
-    #connect{
-        margin: 4% 0 0 0;
-        padding: 3% 0;
-        border: 2px solid black;
-        text-align: center;
-        background: rgba(255, 255, 255, 0.2);
+        height: 500px;
     }
 
     #footer{
